@@ -1,0 +1,9 @@
+{
+  "technology": [
+    ["near-inserters", "bob-near-inserters"],
+    ["long-inserters-1", "bob-long-inserters-1"],
+    ["long-inserters-2", "bob-long-inserters-2"],
+    ["more-inserters-1", "bob-more-inserters-1"],
+    ["more-inserters-2", "bob-more-inserters-2"]
+  ]
+}
